fix headshot alignment

--- a/aboutme.css
+++ b/aboutme.css
@@ -104,6 +104,7 @@ a {
 
 .headshot {
   height: 100px;
+  width: 100px;
 }
 body {
   font-family: "PT Sans", sans-serif;
@@ -149,10 +150,11 @@ body {
       body .right .head h1 {
         color: #ffde08;
         img {
-          border-radius: 50%;
-          border: solid 1px #eeeeee;
-          height: 150px;
-          max-width: var(--xl-size); }
+          max-height: 80px;
+          max-height: 80px;
+          width: auto;
+          height: auto;
+          }
         }
       body .right .head p {
         text-transform: uppercase;
